# brainscan-ai-semi-supervised

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_exploration_clustering.ipynb  02_semi_supervised_training.ipynb
support/: notes_passage_echelle.md  support_P10_semi_supervise.pptx
