[project]
name = "brainscan-ai-semi-supervised"
version = "0.1.0"
description = "Projet d'exploration et de labellisation semi-supervisée sur un jeu d'images IRM"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
